# ita-mac-systray-icon

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/adr/: 001-rust-over-java.md  002-programmatic-icon-generation.md  003-github-actions-macos-ci.md  004-ncentral-deployment-via-github-releases.md
src/: icon.rs  main.rs  tray.rs
