[package]
name = "ita-mac-systray-icon"
version = "0.1.0"
edition = "2024"
description = "A macOS menu bar tray icon that links to the IT Anywhere self-service portal"
repository = "https://github.com/IT-Anywhere/ita-mac-systray-icon"
license = "LicenseRef-Proprietary"

[dependencies]
open = "5.3.3"
tao = "0.34.5"
tray-icon = "0.21.3"
